--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
     <script src="libraries/matter.js"></script>
     <script src="libraries/p5.play.js"></script>
     <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/7.16.0/firebase-database.js"></script>
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-         https://firebase.google.com/docs/web/setup#available-libraries -->
-    
-    <script>
-      // Your web app's Firebase configuration
-      var firebaseConfig = {
-        apiKey: "AIzaSyC4BUBzZyI9XgTnaOtXIDLGD7uIUMiElGc",
-        authDomain: "c39-fruitcatcher.firebaseapp.com",
-        databaseURL: "https://c39-fruitcatcher.firebaseio.com",
-        projectId: "c39-fruitcatcher",
-        storageBucket: "c39-fruitcatcher.appspot.com",
-        messagingSenderId: "686122669825",
-        appId: "1:686122669825:web:489d7ecfc2fcb4f9a66d00"
-      };
-      // Initialize Firebase
-      firebase.initializeApp(firebaseConfig);
-    </script>
+   <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.5.0/firebase-database.js"></script>
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
 
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCMtrl6YAUNeLD2vj5A5v0nI1GKzPDDrrA",
+    authDomain: "project-39-40b8e.firebaseapp.com",
+    databaseURL: "https://project-39-40b8e-default-rtdb.firebaseio.com",
+    projectId: "project-39-40b8e",
+    storageBucket: "project-39-40b8e.appspot.com",
+    messagingSenderId: "776225612847",
+    appId: "1:776225612847:web:38949c475db0054e7c12da"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <!--Add Your JS files here -->
     <script src="js/player.js"></script>
     <script src="js/form.js"></script>
@@ -35,7 +35,7 @@
 
   </head>
   <body>
-    <script src="sketch.js"></script>
+  
   
 
 </body></html>
